<resources>
    <string name="app_name">Veg&amp;Fru</string>
    <string name="kereses">Keresés</string>
    <string name="kosar">Kosár</string>
    <string name="fiok">Fiók</string>
    <string name="rendezes">rendezés</string>
    <string name="vissza">Vissza</string>
    <string name="email_cim">email cím*</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="jelszo">jelszó*</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="teljes_nev">Teljes név*</string>
    <string name="mar_regisztraltam">Már regisztráltam</string>
    <string name="telefonszam">Telefonszám*</string>
    <string name="adoszam">Adószám*</string>
    <string name="ceget_regisztralok">Céget regisztrálok</string>
    <string name="ceg_neve">Üzlet neve*</string>
    <string name="jelszo_ujra">Jelszó újra*</string>
    <string name="szallitasi_cim">Szállítási cím*</string>
    <string name="szekhely">Székhely*</string>
    <string name="elado_ceget_regisztralok">Eladóként regisztrálok</string>
    <string name="csak_cegek">(csak cégek)</string>
    <string name="aszf">ÁSZF</string>
    <string name="ugyfelszolgalat">Ügyfélszolgálat</string>
    <string name="eladasaim">Eladásaim</string>
    <string name="rendeleseim">Rendeléseim</string>
    <string name="rendelesek">Rendelések</string>
    <string name="adataim">Adataim</string>
    <string name="profilom">Profilom</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="ASZF">Általános Szerződési Feltételek</string>
    <string name="email_ugyfelszolgalat">Email cím:</string>
    <string name="farkaszalan2001_gmail_com">farkaszalan2001@gmail.com</string>
    <string name="discord">Discord:</string>
    <string name="kolbasz_9234"><u>Kolbász#9234</u></string>
    <string name="telefon_ugyfelszolgalat">Telefonszám:</string>
    <string name="_36_30_621_0890">+36 30 621 0890</string>
    <string name="bolt_kezelese">Bolt kezelése</string>
    <string name="adatok_szerkesztese">Adatok szerkesztése</string>
    <string name="profil_adatai">Profil adatai</string>
    <string name="ceg_neve_modositas">Cég neve:</string>
    <string name="adoszam_modositas">Adószám:</string>
    <string name="szekhely_modositas">Székhely:</string>
    <string name="szallitasi_cim_modositas">Szállítási cím:</string>
    <string name="telefonszam_modositas">Telefonszám:</string>
    <string name="email_modoistas">Email:</string>
    <string name="nev_modositas">Név:</string>
    <string name="jelszo_modositashoz">Jelszó:</string>
    <string name="tovabb">Tovább</string>
    <string name="megse">Mégse</string>
    <string name="aruhaz_kezelese">Áruház kezelése</string>
    <string name="uj_termek_hozzaadasa">Új termék</string>
    <string name="title_activity_termek_szerkesztese">TermekSzerkesztese</string>
    <string name="termekek">Termékeid:</string>
    <string name="add_hozza_az_else_termeked">Add hozzá az első terméked</string>
    <string name="termek_hozzaadasa">Termék hozzáadása</string>
    <string name="termek_neve">Termék neve*</string>
    <string name="termek_egysegara_db">Termék egységára (Ft/db)*</string>
    <string name="termek_egysegara_kg">Termék egységára (Ft/kg)*</string>
    <string name="keszleten_levok_darabszama">Készlet (db)*</string>
    <string name="keszleten_levok_kg">Készlet (kg)*</string>
    <string name="mentes">Mentés</string>
    <string name="termek_kepenek_beallitasa">Termék képének beállítása</string>
    <string name="todo">TODO</string>
    <string name="aruhaz_kepenek_beallitasa">Áruház képének beállítása</string>
    <string name="aruhaz_kepenek_modositasa">Áruház képének módosítása</string>
    <string name="termek_mentese">Termék mentése...</string>
    <string name="bejelentkezesProgress">Bejelentkezés...</string>
    <string name="regisztraciProgress">Regisztráció...</string>
    <string name="modositas">Módosítás...</string>
    <string name="betoltes">Betöltés...</string>
    <string name="torles">Törlés...</string>
    <string name="uj_jelszi_ismet">Új jelszó ismét:</string>
    <string name="uj_jelszo">Új jelszó:</string>
    <string name="ellenorzes">Ellenőrzés...</string>
    <string name="sulyban_arazando_termek">Súlyban árazandó termék </string>
    <string name="termek_sulya_kg">Termék súlya (kg)*</string>
    <string name="termek_kepe">Termék képe</string>
    <string name="termek_neve_card_view">Termék neve</string>
    <string name="modositas_card_view">Módosítás</string>
    <string name="torles_card_view">Törlés</string>
    <string name="bolt_kepe">Bolt Képe</string>
    <string name="termek_szerkesztese">Termék szerkesztése</string>
    <string name="termek_kepenek_modositasa">Termék képének módosítása</string>
    <string name="modositas_termek_modosit">Módosítás</string>
    <string name="termek_modositasa_progress">Termék módosítása...</string>
    <string name="uzlet_neve">Üzlet neve</string>
    <string name="varhato_szallitasi_ido">Várható szállítási idő</string>
    <string name="szallitasi_koltseg">Szállítási költség*</string>
    <string name="kosarba">Kosárba</string>
    <string name="elso_termek_letrehozasa">Add hozzá első termékedet a boltodhoz</string>
    <string name="nincs_termek">Jelenleg egyetlen termék sem elérhető</string>
    <string name="nincs_keresesi_eredmeny">Nincs a keresésnek megfelelő elem!</string>
    <string name="rendelendo_mennyiseg_kg">Rendelendő mennyiség (kg)*</string>
    <string name="rendelendo_mennyiseg_db">Rendelendő mennyiség (db)*</string>
    <string name="rendelendo">Rendelenő:</string>
    <string name="keszlet">Készlet</string>
    <string name="keszleten">Készleten:</string>
    <string name="ar">Termék Ára</string>
    <string name="egysegar">Egységár:</string>
    <string name="suly">Termék súlya</string>
    <string name="termely_suly">Termék súlya:</string>
    <string name="termek_nev">Termék neve</string>
    <string name="kosatba">Kosárba</string>
    <string name="termek_egysegar">Termék egységár</string>
    <string name="szerkesztes">Szerkesztés</string>
    <string name="ures_kosar">Üres a kosarad!</string>
    <string name="rendeles_leadasa">Rendelés leadása</string>
    <string name="fizetendo_osszeg">Fizetendő összeg :</string>
    <string name="megrendelo_neve">Megrendelő neve*</string>
    <string name="megrendelo_email_cime">Megrendelő email címe*</string>
    <string name="megrendel_telefonszama">Megrendelő telefonszáma*</string>
    <string name="szallitasi_cim_rende">Szállítási cím*</string>
    <string name="megrendel_uzlet_neve">Megrendelő üzlet neve*</string>
    <string name="megrendel_uzlet_adoszam">Megrendelő üzlet adószáma*</string>
    <string name="szamlazasi_cim">Számlázási cím*</string>
    <string name="rendeles_lead">Rendelés leadása</string>
    <string name="feldolgozas_folyamatban">Fizetés folyamatban...</string>
    <string name="termekek_fizetes">Termékek:</string>
    <string name="elfogadom_az_aszf">Elfogadom az ÁSZF-t</string>
    <string name="rendben">Befejezés</string>
    <string name="rendeles_reszletei">Rendelés részletei:</string>
    <string name="sikeres_rendeles">Sikeres Rendelés</string>
    <string name="nincs_rendelesed">Még nincs egyetlen rendelésed sem</string>
    <string name="facebook">Facebook:</string>
    <string name="farkas_zalan"><u>Farkas Zalán</u></string>
    <string name="elfelejtettem_a_jelszavam">Elfelejtettem a jelszavam</string>
    <string name="email_kuldese">Email küldése</string>
    <string name="nyugta">Nyugta</string>
    <string name="jelsz_visszaallitasa">Jelszó visszaáííltása</string>
    <string name="psw_reset_szoveg"><font size="19">Jelszó visszaállító email sikeresen ki lett küldve a megadott email címre!</font>\n\n\n\n<font size="16">Ha nem érkezik meg az email 5 percen belül kérjük próbálja meg újra!</font></string>
    <string name="psw_reset_szoveg2"><font size="30">Jelszó visszaállító email sikeresen ki lett küldve a megadott email címre!</font>\n\n\n\n<font size="25">Ha nem érkezik meg az email 5 percen belül kérjük próbálja meg újra!</font></string>
</resources>