<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activitys.FelhasznaloKezeles.RegisztracioActivity"
    android:background="#B4E4EBF4">

    <TextView
        android:id="@+id/cim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="43sp"
        android:layout_marginTop="20dp"
        android:text="@string/regisztracio" />


    <EditText
        android:id="@+id/nev"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/teljes_nev"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="50dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:cornerRadius="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email_cim"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:cornerRadius="10dp"/>

    <EditText
        android:id="@+id/telefonszam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/telefonszam"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:digits="0123456789+"
        android:lines="1"
        android:autofillHints="phone"
        app:cornerRadius="10dp"/>
    <ProgressBar
        android:id="@+id/progressBarRegisztracio"
        android:layout_marginTop="150dp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/regisztracioText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/regisztraciProgress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/lakcim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/szallitasi_cim"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"
        app:cornerRadius="10dp"/>

    <EditText
        android:id="@+id/jelszo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/jelszo"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:cornerRadius="10dp"/>

    <EditText
        android:id="@+id/jelszoUjra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/jelszo_ujra"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:cornerRadius="10dp"/>

    <LinearLayout
        android:id="@+id/regCegesCuccok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/eladoE"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/elado_ceget_regisztralok"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:textSize="17sp"
        app:thumbTint="@drawable/switch_thumb"
        app:trackTint="@drawable/switch_track"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="-10dp"
        android:text="@string/csak_cegek"/>

    <CheckBox
        android:id="@+id/cegE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ceget_regisztralok"
        android:textSize="17sp"
        android:buttonTint="@color/purple_500"
         />

    <EditText
        android:id="@+id/cegNev"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ceg_neve"
        android:buttonTint="@color/purple_500"
        app:cornerRadius="10dp"
        android:inputType="textPersonName"
        android:visibility="gone"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/adoszam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        app:cornerRadius="10dp"
        android:hint="@string/adoszam"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/szekhely"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/szekhely"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        app:cornerRadius="10dp"
        android:inputType="textPostalAddress"
        android:visibility="gone"
        android:autofillHints="postalAddress" />

    <ImageView
        android:id="@+id/termekKepBeallitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/standard_item_picture"
        android:contentDescription="@string/todo"
        android:onClick="onTermekKepFeltoltesReg"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/termekKepCim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onTermekKepFeltoltesReg"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:text="@string/aruhaz_kepenek_beallitasa"
        android:textAlignment="center"
        android:textSize="20sp"

        />
    </LinearLayout>
    <Button
        android:id="@+id/regisztracioButton"
        android:layout_width="240sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:onClick="onRegister"
        app:cornerRadius="10dp"
        android:textSize="17sp"
        android:text="@string/regisztracio" />

    <Button
        android:id="@+id/bejelentkezes"
        android:layout_width="240sp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="10dp"
        android:layout_gravity="center"
        android:onClick="onLoginOpen"
        android:textSize="17sp"
        android:text="@string/mar_regisztraltam" />



</LinearLayout>
</ScrollView>