<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/kereso"
        android:icon="@drawable/kereso"
        android:title="@string/kereses"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/kosar"
        android:icon="@drawable/kosar"
        android:orderInCategory="3"
        android:title="@string/kosar"
        app:actionLayout="@layout/cart_number"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/fiok"
        android:icon="@drawable/profil"
        android:orderInCategory="1"
        android:title="@string/fiok"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>