<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4E4EBF4"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Activitys.FelhasznaloKezeles.AdataimActivity">

        <TextView
            android:id="@+id/cim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profil_adatai"
            android:textAlignment="center"
            android:textSize="43sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nevLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nev_modositas"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nevAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:autofillHints="name"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/teljes_nev"
                android:inputType="textPersonName"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_modoistas"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/email_cim"
                android:inputType="textEmailAddress"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/telszamLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefonszam_modositas"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/telefonszamAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="phone"
                android:backgroundTint="@color/purple_500"
                android:digits="0123456789+"
                android:ems="10"
                android:hint="@string/telefonszam"
                android:inputType="phone"
                android:lines="1"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarModositas"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="150dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/modositasText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/modositas"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/szallitasiCimLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/szalitasiCimLabell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/szallitasi_cim_modositas"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lakcimAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/szallitasi_cim"
                android:inputType="textPostalAddress"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paswLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uj_jelszo"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/jelszoAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:inputType="textPassword"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paswRepeatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uj_jelszi_ismet"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/jelszoUjraAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:inputType="textPassword"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cegnevLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ceg_neve_modositas"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/cegNevAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="name"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/ceg_neve"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adoszamLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adoszam_modositas"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/adoszamAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/adoszam"
                android:inputType="number"
                android:visibility="gone"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/szekhelyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/szekhely_modositas"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/szekhelyAdatSzerkezto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/szekhely"
                android:inputType="textPostalAddress"
                android:visibility="gone"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/termekKepBeallitasModosit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/uzlet_kepe_megjelenit"
            android:contentDescription="@string/todo"
            android:onClick="onTermekKepFeltoltesModosit"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:srcCompat="@drawable/grocery_store" />

        <TextView
            android:id="@+id/termekKepCimModosit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:onClick="onTermekKepFeltoltesModosit"
            android:text="@string/aruhaz_kepenek_modositasa"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/adatokSzerkesztese"
            android:layout_width="270sp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onAdatSzerkesztes"
            android:text="@string/adatok_szerkesztese"
            android:textSize="17sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/vissza"
            android:layout_width="270sp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onVissza"
            android:text="@string/vissza"
            android:textSize="17sp"
            app:cornerRadius="10dp" />
    </LinearLayout>
</ScrollView>